# trove

./: .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
sidecar/: package.json
sidecar/scripts/: build.ts
sidecar/src/: index.ts
src/: App.css  App.tsx  constants.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commands/: agent.rs  apps.rs  mod.rs  storage.rs
src-tauri/src/models/: app.rs
src/components/: AppFormModal.tsx  ConfirmModal.tsx  ContentArea.css  ContentArea.tsx  EmptyState.css  EmptyState.tsx  ErrorBoundary.css  ErrorBoundary.tsx  KeyboardShortcutsModal.css  KeyboardShortcutsModal.tsx  LoadingIndicator.css  LoadingIndicator.tsx  Modal.css  Modal.tsx  Sidebar.css  Sidebar.tsx  SidebarItem.css  SidebarItem.tsx
src/hooks/: useApps.ts
src/types/: index.ts
src/utils/: apps.ts
tests/: apps.test.ts
